Scroll size is not recalculated when absolute left of child is updated https://bugs.webkit.org/show_bug.cgi?id=123958

Patch by Manish R Gurnaney <m.gurnaney@samsung.com> on 2014-03-13
Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/css/display-inline-block-scrollbar.html
Actual issue was that whenever there is the content change in the
RenderBlock having inline-block children, The InlineFlowBox while
computing overflow never resets previous value.

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::computeOverflow):
Added code to clear overflow when we start computing overflow for
InlineFlowBox. So as to ScrollSize can be recalculated properly.

LayoutTests:

* fast/css/display-inline-block-scrollbar-expected.txt: Added.
* fast/css/display-inline-block-scrollbar.html: Added.
Added test case to check that scroll size is recalculated when absolute
left of child is updated.

Canonical link: https://commits.webkit.org/148192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165602 268f45cc-cd09-0410-ab3c-d52691b4dbfc