Source/WebCore/rendering/InlineFlowBox.cpp
@@ -938,6 +938,9 @@ void InlineFlowBox::computeOverflow(LayoutUnit lineTop, LayoutUnit lineBottom, G
     if (knownToHaveNoOverflow())
         return;
 
+    if (m_overflow)
+        m_overflow.clear();
+
     // Visual overflow just includes overflow for stuff we need to repaint ourselves.  Self-painting layers are ignored.
     // Layout overflow is used to determine scrolling extent, so it still includes child layers and also factors in
     // transforms, relative positioning, etc.
